[workspace]

[package]
name = "ultracam-console"
version = "1.0.0"
edition = "2021"
description = "TOTK UltraCam Console - Rust GUI"

[dependencies]
eframe = "0.31"
egui = "0.31"
tokio = { version = "1", features = ["full"] }
system-fonts = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
configparser = "3"
rand = "0.8"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
